@@ -57,6 +57,7 @@
 - fix a couple of compiler warnings.
 - add after sssd dependency to unit file.
 - dont start readmap unless ready.
+- fix dumpmaps multi output.
 
 25/07/2012 autofs-5.0.7
 =======================
